salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/Account_Buffer__c.object-meta.xml
<CustomObject>
    <label>Account Buffer</label>
    <nameField>
        <label>Account Buffer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Buffer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>