salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Account_Billing_Notes_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Notes_Instructions__c</fullName>
    <label>Account Billing Notes/Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>