salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Account_Shipping_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address_Line_2__c</fullName>
    <label>Account Shipping Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>