salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Account_Shipping_Receiving_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Receiving_Notes__c</fullName>
    <label>Account Shipping/Receiving  Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>