salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/ACCTfax__c.field-meta.xml
<CustomField>
    <fullName>ACCTfax__c</fullName>
    <label>ACCTfax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>