salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/ACCTphone__c.field-meta.xml
<CustomField>
    <fullName>ACCTphone__c</fullName>
    <label>ACCTphone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>