salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/BAddress__c.field-meta.xml
<CustomField>
    <fullName>BAddress__c</fullName>
    <label>BAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>