salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/BCountry__c.field-meta.xml
<CustomField>
    <fullName>BCountry__c</fullName>
    <label>BCountry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>