salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/BState__c.field-meta.xml
<CustomField>
    <fullName>BState__c</fullName>
    <label>BState</label>
    <length>2</length>
    <type>Text</type>
</CustomField>