salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Bzip_4__c.field-meta.xml
<CustomField>
    <fullName>Bzip_4__c</fullName>
    <label>Bzip + 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>