salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Carrier_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Business_Type__c</fullName>
    <label>Carrier Business Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>