salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Carrier_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Review_Status__c</fullName>
    <label>Carrier Review Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>