salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/CONDescription__c.field-meta.xml
<CustomField>
    <fullName>CONDescription__c</fullName>
    <label>CONDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>