salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/CONemail__c.field-meta.xml
<CustomField>
    <fullName>CONemail__c</fullName>
    <label>CONemail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>