salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/CONextension__c.field-meta.xml
<CustomField>
    <fullName>CONextension__c</fullName>
    <label>CONextension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>