salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/CONID__c.field-meta.xml
<CustomField>
    <fullName>CONID__c</fullName>
    <label>CONID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>