salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/CONmobile__c.field-meta.xml
<CustomField>
    <fullName>CONmobile__c</fullName>
    <label>CONmobile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>