salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Factoring_Company_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Company_Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Factoring Company Legacy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>