salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/FED_TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>FED_TAX_ID__c</fullName>
    <label>FED TAX ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>