salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>firstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>