salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <label>Fleet Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>