salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Insurance_Policy_2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_2__c</fullName>
    <label>Insurance Policy #2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>