salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Insurance_Policy_Expiration2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Expiration2__c</fullName>
    <label>Insurance Policy Expiration2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>