salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Insurance_Policy_Type2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Type2__c</fullName>
    <label>Insurance Policy Type2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>