salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Legacy_Acct_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Acct_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Acct Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>