salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MAX__c.field-meta.xml
<CustomField>
    <fullName>MAX__c</fullName>
    <label>MAX</label>
    <length>10</length>
    <type>Text</type>
</CustomField>