salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>MC #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>