salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MCity__c.field-meta.xml
<CustomField>
    <fullName>MCity__c</fullName>
    <label>MCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>