salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MCountry__c.field-meta.xml
<CustomField>
    <fullName>MCountry__c</fullName>
    <label>MCountry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>