salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MEXICO_STATE_COVERAGE__c.field-meta.xml
<CustomField>
    <fullName>MEXICO_STATE_COVERAGE__c</fullName>
    <label>MEXICO STATE COVERAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>