salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/MIN__c.field-meta.xml
<CustomField>
    <fullName>MIN__c</fullName>
    <label>MIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>