salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Mzip_4__c.field-meta.xml
<CustomField>
    <fullName>Mzip_4__c</fullName>
    <label>Mzip + 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>