salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OAddress__c.field-meta.xml
<CustomField>
    <fullName>OAddress__c</fullName>
    <label>OAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>