salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OCity__c.field-meta.xml
<CustomField>
    <fullName>OCity__c</fullName>
    <label>OCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>