salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OCountry__c.field-meta.xml
<CustomField>
    <fullName>OCountry__c</fullName>
    <label>OCountry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>