salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OF_DRIVERS__c.field-meta.xml
<CustomField>
    <fullName>OF_DRIVERS__c</fullName>
    <label># OF DRIVERS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>