salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OPostal_Code__c.field-meta.xml
<CustomField>
    <fullName>OPostal_Code__c</fullName>
    <label>OPostal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>