salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/OState__c.field-meta.xml
<CustomField>
    <fullName>OState__c</fullName>
    <label>OState</label>
    <length>2</length>
    <type>Text</type>
</CustomField>