salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Ozip_4__c.field-meta.xml
<CustomField>
    <fullName>Ozip_4__c</fullName>
    <label>Ozip + 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>