salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/QUOTE_METHOD__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_METHOD__c</fullName>
    <label>QUOTE METHOD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>