salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/SAddress__c.field-meta.xml
<CustomField>
    <fullName>SAddress__c</fullName>
    <label>SAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>