salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/SState__c.field-meta.xml
<CustomField>
    <fullName>SState__c</fullName>
    <label>SState</label>
    <length>2</length>
    <type>Text</type>
</CustomField>