salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/STATUS_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>STATUS_CONTACT__c</fullName>
    <label>STATUS CONTACT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>