salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/STATUS_METHOD__c.field-meta.xml
<CustomField>
    <fullName>STATUS_METHOD__c</fullName>
    <label>STATUS METHOD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>