salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/Szip_4__c.field-meta.xml
<CustomField>
    <fullName>Szip_4__c</fullName>
    <label>Szip + 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>