salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/UNITS__c.field-meta.xml
<CustomField>
    <fullName>UNITS__c</fullName>
    <label>UNITS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>