salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/fields/US_STATE_COVERAGE__c.field-meta.xml
<CustomField>
    <fullName>US_STATE_COVERAGE__c</fullName>
    <label>US STATE COVERAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>