salesforce-integration/Salesforce-Components/objects/Account_Buffer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>firstName__c</columns>
    <columns>lastName__c</columns>
    <columns>BAddress__c</columns>
    <columns>BCity__c</columns>
    <columns>BState__c</columns>
    <columns>TMS_Type__c</columns>
    <columns>Processed__c</columns>
    <columns>transportation_role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>